<?xml version="1.0"?>
<package format="2">
  <name>rosbag_utils</name>
  <version>1.0.0</version>
  <description>Utilities for rosbags</description>

  <author email="jstrader@mit.edu">Jared Strader</author>
  <maintainer email="jstrader@mit.edu">Jared Strader</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
   <exec_depend>image_transport</exec_depend>


  <export>
  </export>

</package>
